# solrizer

./: .gitignore  Dockerfile  Dockerfile.ci  Jenkinsfile  README.md  indexer-settings.yml  indexers.yml  pyproject.toml
.github/workflows/: pdoc.yml
docs/: EDTFtoDateRange.md
src/solrizer/: __init__.py  errors.py  faceters.py  server.py  solr.py  web.py
src/solrizer/handles/: __init__.py
src/solrizer/indexers/: __init__.py  aggregate_fields.py  content_model.py  dates.py  described_by.py  discoverability.py  extracted_text.py  facets.py  handles.py  iiif_links.py  page_sequence.py  root.py  utils.py
src/solrizer/ocr/: __init__.py  alto.py
src/solrizer/templates/: index.html
tests/: conftest.py  test_app.py  test_handle_class.py  test_solr.py  test_web.py
tests/indexers/: test_aggregate_fields.py  test_content_model.py  test_date_facets.py  test_dates.py  test_described_by.py  test_discoverability.py  test_extracted_text.py  test_faceters.py  test_facets.py  test_get_resource_language.py  test_handles.py  test_iiif_links.py  test_indexer_context.py  test_page_sequence.py  test_root.py  test_utils.py
tests/indexers/data/: form.json  set.json  termsOfUse.json
tests/indexers/test_content_model/: collection.json
tests/indexers/test_extracted_text/: libfcrepo-1743.xml  other.xml  text.html  text.txt
tests/indexers/test_faceters/: form.jsonld
tests/ocr/: test_alto.py  test_ocr.py
tests/test_app/: item.nt
tests/test_web/: indexers.yml
