[project]
name = "solrizer"
version = "1.0.0-dev"
dependencies = [
    "edtf",
    "flask",
    "langcodes",
    "plastron-client",
    "plastron-models",
    "plastron-rdf",
    "plastron-repo",
    "plastron-utils",
    "python-dotenv",
    "requests-jwtauth",
    "uritemplate",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "httpretty",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]
dev = [
    "pdoc",
]

[project.entry-points.solrizer_indexers]
content_model = "solrizer.indexers.content_model:content_model_fields"
discoverability = "solrizer.indexers.discoverability:discoverability_fields"
page_sequence = "solrizer.indexers.page_sequence:page_sequence_fields"
iiif_links = "solrizer.indexers.iiif_links:iiif_links_fields"
dates = "solrizer.indexers.dates:date_fields"

[tool.pytest.ini_options]
# the datetime.datetime.utcnow() warning is coming from the httpretty code
filterwarnings = 'ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning'
