[project]
name = "solrizer"
version = "1.0.0-dev"
dependencies = [
    "edtf",
    "flask",
    "langcodes",
    "plastron-client",
    "plastron-models",
    "plastron-rdf",
    "plastron-repo",
    "plastron-utils",
    "python-dotenv",
    "python-iso639",
    "python-jsonpath",
    # require rdflib 7.0.0+ in order to have access
    # to the NamespaceManager.curie() method
    "rdflib>=7.0.0",
    "requests-jwtauth",
    "uritemplate",
    "waitress",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "httpretty",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]
dev = [
    "pdoc",
]

[project.scripts]
solrizer = "solrizer.server:run"

[project.entry-points.solrizer_indexers]
content_model = "solrizer.indexers.content_model:content_model_fields"
discoverability = "solrizer.indexers.discoverability:discoverability_fields"
page_sequence = "solrizer.indexers.page_sequence:page_sequence_fields"
iiif_links = "solrizer.indexers.iiif_links:iiif_links_fields"
dates = "solrizer.indexers.dates:date_fields"
facets = "solrizer.indexers.facets:facet_fields"

[project.entry-points.solrizer_faceters]
admin_set = "solrizer.faceters:AdminSetFacet"
archival_collection = "solrizer.faceters:ArchivalCollectionFacet"
contributor = "solrizer.faceters:ContributorFacet"
creator = "solrizer.faceters:CreatorFacet"
language = "solrizer.faceters:LanguageFacet"
location = "solrizer.faceters:LocationFacet"
presentation_set = "solrizer.faceters:PresentationSetFacet"
publication_status = "solrizer.faceters:PublicationStatusFacet"
publisher = "solrizer.faceters:PublisherFacet"
rdf_type = "solrizer.faceters:RDFTypeFacet"
resource_type = "solrizer.faceters:ResourceTypeFacet"
rights = "solrizer.faceters:RightsFacet"
subject = "solrizer.faceters:SubjectFacet"
visibility = "solrizer.faceters:VisibilityFacet"

[tool.pytest.ini_options]
# the datetime.datetime.utcnow() warning is coming from the httpretty code
filterwarnings = 'ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning'
